# Neural-Network-Circuit-Visualization

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
src/: Actor.cpp  Actor.h  Component.cpp  Component.h  DrawComponent.cpp  DrawComponent.h  DynamicMatrix.cpp  DynamicMatrix.h  Game.cpp  Game.h  Line.cpp  Line.h  Math.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkActor.cpp  NeuralNetworkActor.h  Transform.cpp  Transform.h  main.cpp  nn.cfg
web/: build-web.sh  shell.html
